# geolocation

./: .dockerignore  .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README-DEPLOY.md  README.md  build.rs  build.sh  deploy-appservice.ps1  deploy-phased.ps1  deploy.ps1  docker-compose.dev.yml  docker-compose.yml  playground-mongodb.js  update-container-app.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: azure-deploy.yml  azure-static-web-apps-zealous-grass-0beb82e0f.yml  geodev01-app-AutoDeployTrigger-5f5fbb11-4bc5-4f89-855a-bf1436ea64f4.yml
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  wasm.d.ts
frontend/src/components/: DocumentTable.tsx  Header.tsx  Layout.tsx  Sidebar.tsx  StatCard.tsx
frontend/src/hooks/: useWasm.ts
frontend/src/pages/: AnalyseFiscal.tsx  ConhecimentosTransporte.tsx  Dashboard.tsx  NotasFiscais.tsx  Settings.tsx  Upload.tsx
frontend/src/services/: api.ts
frontend/src/store/: useStore.ts
frontend/src/wasm/: geolocation.ts
frontend/wasm/: README.md  geolocation.ts
infra/: acr-only.bicep  main-container-app.bicep  main.bicep  main.json  parameters.acr-only.json  parameters.container-app.json  parameters.dev.json  parameters.prod.json
scripts/: setup.sh
src/: error.rs  google_maps_api.rs  lib.rs  main.rs  main.rs.bak  search_api.rs  server.rs  wasm.rs
src/asm/: mod.rs  xml_parser_x86_64_gas.s  xml_parser_x86_64_msvc.asm
src/database/: mod.rs  mongodb.rs  repository.rs  schema.rs
src/google_maps/: client.rs  distance_matrix.rs  geocoding.rs  mod.rs  places.rs  types.rs
src/models/: mod.rs
src/parsers/: cte.rs  mod.rs  nfe.rs
src/utils/: metrics.rs  mod.rs
src/validators/: fiscal.rs  mod.rs
test_data/: sample_cte.xml  sample_nfe.xml
