[package]
name = "geolocation"
version = "0.1.0"
edition = "2021"
authors = ["Avila DevOps"]
description = "Leitor XML de Notas Fiscais e Conhecimentos de Transporte com processamento Assembly"

[dependencies]
# XML Processing
quick-xml = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "postgres", "chrono", "uuid"] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }
futures = "0.3"
tokio = { version = "1.35", features = ["full"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
lazy_static = "1.4"
prometheus = "0.13"

# Encoding
encoding_rs = "0.8"

# Web API
axum = { version = "0.7", features = ["multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde_json = "1.0"
urlencoding = "2.1"

# HTTP Client (para APIs externas)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Google Maps Integration (opcional - comentado por enquanto)
# geocoding = { version = "0.4" }
# polyline = "0.10"

# WASM Support
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lib]
name = "geolocation"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "geolocation"
path = "src/main.rs"

[[bin]]
name = "geolocation-server"
path = "src/server.rs"

[features]
default = []
wasm = ["wasm-bindgen", "wasm-bindgen-futures", "web-sys", "console_error_panic_hook", "serde-wasm-bindgen"]

[build-dependencies]
cc = "1.0"
